# RuntimeShaderEditor

./: README.md  test_configuration.bat
editor/client/: RuntimeShaderEditor_DEBUG.bat  RuntimeShaderEditor_RELEASE.bat  create_distribution_version.bat
editor/client/WebApplication/: app.html  package.json
editor/client/WebApplication/css/: ProgramSelector.css  RuntimeShaderEditor.css
editor/client/WebApplication/js/: ProgramSelector.js  RSEMessage.js  RuntimeShaderEditor.js
editor/server/: README.md
editor/server/RuntimeShaderEditor/: RunetimeShaderEditor.cpp  RunetimeShaderEditor.hpp  RuntimeShaderEditor.cpp  RuntimeShaderEditor.hpp
sample project/: CMakeLists.txt  README.md
sample project/android/: build.xml
sample project/android/jni/: Android.mk  native.cpp  native.hpp
sample project/android/libs/armeabi-v7a/: gdb.setup
sample project/android/res/layout/: main.xml
sample project/android/res/values/: strings.xml
sample project/android/src/com/example/glbasicframework/: CustomGLSurfaceView.java  GLBasicFrameworkActivity.java  Native.java
sample project/resources/Models/: skull.ply
sample project/resources/shaders/: monkey.fs  monkey.vs
sample project/src/: Monkey.cpp  Monkey.hpp  Scene.cpp  Scene.hpp  SharedConstants.hpp  main.cpp
sample project/src/InputManager/: InputManager.cpp  InputManager.hpp
sample project/src/ModelLoader/: FormatDetector.cpp  FormatDetector.hpp  ModelLoader.cpp  ModelLoader.hpp  PLYLoader.cpp
sample project/src/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.hpp
sample project/src/Textures/: Texture.hpp
sample project/src/Utils/: debug.h  gl.h  tga.h
sample project/test/model loader 2.0/: main.cpp  makefile
sample project/test/model loader 2.0/ModelLoader/: ModelLoader.cpp  ModelLoader.hpp  PLYLoader.cpp  PLYLoader.hpp
sample project/test/ply format david/: main.cpp  monkey.ply
sample project/test/ply format david/Drawables/: ModelLoader.cpp  ModelLoader.hpp  PLYFormatHelper.cpp  PLYFormatHelper.hpp
